--- a/spe_blog/templates/spe_blog/plugins/blog_posts.html
+++ b/spe_blog/templates/spe_blog/plugins/blog_posts.html
@@ -1,18 +1,17 @@
 {% load i18n cms_tags sekizai_tags %}
 
-<div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }}">
+<div class="tile-editorial tile-editorial-txtblck row" style="background-color:white">
 {% for article in posts %}
     <div class="row sideListItem">
-    {% if pubcode == "TWA" %}
-        <div class="col-xs-11">
-        <span class="sideListTitleTWA"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
-    {% else %}
+        <a href="{{ article.get_absolute_url}}">
         <div class="col-xs-12">
-        <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title|truncatewords:10 }}</a></span><br>
-    {% endif %}
-
-        <span class="sideListDateTWA">{{ article.publication_date|date:"d F Y" }}</span>
+            <span class="sideListTitle">{{ article.title|truncatewords:10 }}</span><br>
+            <span class="sideListDateTWA">{{ article.publication_date|date:"d F Y" }}</span>
+            <div>
+                {{ article.teaser }}
+            </div>
         </div>
+        </a>
     </div>
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
