--- a/spe_blog/templates/spe_blog/plugins/blog_posts.html
+++ b/spe_blog/templates/spe_blog/plugins/blog_posts.html
@@ -1,24 +1,29 @@
 {% load i18n cms_tags sekizai_tags %}
 
-<div class="tile-editorial tile-editorial-txtblck row" style="background-color:white">
-{% for article in posts %}
-    <div class="row sideListItem">
-        <a href="{{ article.get_absolute_url}}">
-        <div class="col-xs-12">
-            <span class="sideListTitle">{{ article.title|truncatewords:10 }}</span><br>
-            <span class="sideListDateTWA">{{ article.publication_date|date:"d F Y" }}</span>
-            <div>
-                {{ article.teaser }}
-            </div>
-        </div>
-        </a>
+{% if error %}
+    <div class="tile-editorial tile-editorial-txtblck row" style="background-color:white">
+    {{ error }}
     </div>
-{% empty %}
-    <p class="well">{% trans "No editorial available" %}</p>
-{% endfor %}
+{% else %}
+    <div class="tile-editorial tile-editorial-txtblck row" style="background-color:white">
+    {% for article in posts %}
+        <div class="row sideListItem">
+            <a href="{{ article.get_absolute_url}}&laf={{ laf }}">
+            <div class="col-xs-12">
+                <span class="sideListTitle">{{ article.title|truncatewords:10 }}</span><br>
+                <span class="sideListDateTWA">{{ article.publication_date|date:"d F Y" }}</span>
+                <div>
+                    {{ article.teaser }}
+                </div>
+            </div>
+            </a>
+        </div>
+    {% empty %}
+        <p class="well">{% trans "No editorial available" %}</p>
+    {% endfor %}
 
-</div>
-
+    </div>
+{% endif %}
 
 {% addtoblock "js" %}
     <script type="text/javascript" charset="utf-8">
