putting in test parameter display

--- a/spe_blog/templates/spe_blog/plugins/blog_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/blog_detail.html
@@ -1,7 +1,8 @@
 {% load cms_tags sekizai_tags tz %}
 
 {% addtoblock "title2" %}{{ blog.title }}{% endaddtoblock %}
-
+{{ laf }}
+{{ slug }}
     <div class="row articleDetail" id="printMe">
         <div class="col-sm-12 articleTitleBox">
 {#            <h2 class="articleTitle">{{ blog.title }}</h2>#}
