--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -560,3 +560,9 @@
   margin: 10px 0 0 0;
   font-size: 10px;
 }
+.bloglist {
+  .sideListTitle {
+    //font-size:    20px;
+    font-weight:  $font-bold;
+  }
+}
