--- a/mainsite/static/twa/css/mainstyle.css
+++ b/mainsite/static/twa/css/mainstyle.css
@@ -638,6 +638,8 @@ table#authortable p { padding-left: 10px; }
 
 .categoryTitle { background-color: #32bbbc; font-family: "Roboto Slab", serif; color: white; padding: 5px; }
 
+.bloglist .sideListTitle { font-weight: 700; }
+
 /* =================================================================== */
 /* AD ZONES
 ====================================================================== */
