--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -512,3 +512,9 @@
 .fullThumb {
   margin-bottom:  15px;
 }
+.bloglist {
+  .sideListTitle {
+    //font-size:    20px;
+    font-weight:  $font-bold;
+  }
+}
