--- a/mainsite/static/www/css/mainstyle.css
+++ b/mainsite/static/www/css/mainstyle.css
@@ -407,6 +407,8 @@ a:hover { text-decoration: none; }
 
 .fullThumb { margin-bottom: 15px; }
 
+.bloglist .sideListTitle { font-weight: 700; }
+
 /* *************************************** */
 /* *************************************** */
 .redText { color: red; }
