--- a/spe_blog/templates/spe_blog/plugins/blog_posts.html
+++ b/spe_blog/templates/spe_blog/plugins/blog_posts.html
@@ -5,7 +5,7 @@
     {{ error }}
     </div>
 {% else %}
-    <div class="tile-editorial tile-editorial-txtblck row" style="background-color:white">
+    <div class="tile-editorial tile-editorial-txtblck bloglist row" style="background-color:white">
     {% for article in posts %}
         <div class="row sideListItem">
             <a href="{{ article.get_absolute_url}}&laf={{ laf }}">
