--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -527,7 +527,7 @@ table th, table td { padding: 5px; }
 .becomeMember a { color: #fffb22; font-weight: 700; }
 .becomeMember a:hover { color: #2a2a2a; }
 
-.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic, .bestshotpic { overflow: hidden; -webkit-background-size: cover; background-size: cover; background-position: center; border: 1px solid #e2e2e2; }
+.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic, .bestshotpic { overflow: hidden; -webkit-background-size: cover; background-size: cover; background-position: center; }
 
 .detailImgWrap { height: 250px; margin-bottom: 5px; }
 
@@ -598,6 +598,8 @@ table th, table td { padding: 5px; }
 .tile-tech-related .techListItem .techListTitle a { color: #2a2a2a; }
 .tile-tech-related .techListItem .techListTitle a:hover { color: #e51837; }
 .tile-tech-related .techListItem .techListDate { color: #e51837; }
+
+.bloglist .sideListTitle { font-weight: 700; }
 
 /* =================================================================== */
 /* AD ZONES
