--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -701,3 +701,9 @@
   color:                white;
   padding:              5px;
 }
+.bloglist {
+  .sideListTitle {
+    //font-size:    20px;
+    font-weight:  $font-bold;
+  }
+}
