--- a/mainsite/static/www/css/blog.css
+++ b/mainsite/static/www/css/blog.css
@@ -1,3 +1,6 @@
 /* WWW Blog */
-.blogDetail { border: 1px solid hotpink; }
-.blogDetail .demoBlock { border: 1px solid royalblue; }
+.blogDetail { background-color: white; box-shadow: 0 1px 2px #b4b4b9; margin-bottom: 20px; padding: 15px; min-width: 150px; z-index: 100; position: relative; }
+.blogDetail .blogTitleBox .blogAuthorBox { margin-bottom: 20px; }
+.blogDetail .blogTitleBox .blogBodyText { margin-bottom: 20px; }
+.blogDetail .articleShares { margin-bottom: 20px; }
+.blogDetail .demoBlock { border: 1px solid royalblue; opacity: .25; padding: 10px; }
