--- a/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
+++ b/spe_promotions/templates/spe_promotions/plugins/promotion_posts.html
@@ -17,7 +17,7 @@
             </a>
         </div>
     {% empty %}
-        <p class="well">{% trans "No editorial available" %}</p>
+        <p class="well">{% trans "No promotions available" %}</p>
     {% endfor %}
 
     </div>
