adding Sponsored to Promotions

--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -61,8 +61,8 @@ a {
   margin:             0;
 }
 .sponsored {
-  padding:            3px 3px 3px 5px;
-  background-color:   $col-yellow;
+  padding:            5px 10px;
+  background-color:   $col-greenbar;
   color:              $col-black;
   font-weight:        $font-bold;
   font-size:          12px;
