--- a/spe_promotions/templates/spe_promotions/plugins/overlay.html
+++ b/spe_promotions/templates/spe_promotions/plugins/overlay.html
@@ -5,6 +5,9 @@
             <div class="story-wrap" style="background-image:url({{ promo.picture.url }});">
                 <div class="story-text">
                     <h2>{{ promo.event }}</h2>
+            {% if promo.sponsored %}
+                <p class="sponsored">SPONSORED</p>
+            {% endif %}
                     <p>{{ promo.teaser | safe }}</p>
                 </div>
             </div>
