--- a/mainsite/templates/generic_page.html
+++ b/mainsite/templates/generic_page.html
@@ -1,27 +1,47 @@
 {% extends "generic_base.html" %}
+{% load cms_tags sekizai_tags staticfiles %}
+{% load laf_tags %}
+
+{% block title %}{% page_attribute "page_title" %}{% endblock title %}
+
+{% block web_fonts %}
+
+    {% include 'include_scripts.html' %}
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700" rel="stylesheet">
+{#    <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">#}
+
+{% endblock web_fonts %}
 
 {% block css_base %}
-    {%
-        if  laf.toLowerCase()=='jpt':
-
-    %}
-    {% with css_template="include_ogf_css.html" %}
-        {{ block.super }}
-    {% endwith %}
+    {% set_laf_includes "" as testing %}
+    {{ block.super }}
 {% endblock css_base %}
 
 {% block wrap_begin %}<div class="container-fluid">{% endblock wrap_begin %}
 
 {% block content_header %}
-    {% with header_template="include_ogf_header.html" %}
-        {{ block.super }}
-    {% endwith %}
+     {{ block.super }}
 {% endblock content_header %}
+
+{% block content %}
+    <div class="row content-area">
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
+            {% placeholder "notice" %}
+            {% placeholder "content" %}
+        </div>
+        <div class="col-sm-4 col-lg-3 areaRightSide">
+            {% placeholder "aside" %}
+            {% placeholder "additional-content" %}
+        </div>
+    </div>
+
+    {% include 'z_boostrap_size_indicator.html' %}
+
+{% endblock content %}
 
 {% block wrap_end %}</div><!-- CONTAINER END -->{% endblock wrap_end %}
 
 {% block content_footer %}
-    {% with footer_template="include_ogf_footer.html" %}
-        {{ block.super }}
-    {% endwith %}
+     {{ block.super }}
 {% endblock content_footer %}
