--- a/mainsite/templates/test.html
+++ b/mainsite/templates/test.html
@@ -53,6 +53,6 @@
             });
         </script>
     {%  endaddtoblock %}
-    SAS WAS HERE!
+    SAS WAS HERE!  AGAIN!
 
 {% endblock cms_content %}
