fix problems I made when making headers and footers includes

--- a/mainsite/templates/generic_base.html
+++ b/mainsite/templates/generic_base.html
@@ -5,7 +5,7 @@
 {% block web_fonts %}
 
     {% include 'include_scripts.html' %}
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700" rel="stylesheet">
+    {{ block.super }}
 
 {% endblock web_fonts %}
 
