--- a/mainsite/templates/include_ogf_css.html
+++ b/mainsite/templates/include_ogf_css.html
@@ -1,3 +1,4 @@
 {% load cms_tags sekizai_tags staticfiles %}
     <!-- CSS_BASE -->
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'ogf/css/mainstyle.css' %}" />
+    <link rel="stylesheet" type="text/css" media="print" href="{% static 'ogf/css/printstyles.css' %}" />
