--- a/mainsite/templates/hse_base.html
+++ b/mainsite/templates/hse_base.html
@@ -3,7 +3,7 @@
 {% load menu_tags %}
 
 {% block web_fonts %}
-{{ block.super }}
+    {{ block.super }}
     <script src="https://use.typekit.net/xwk3nys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 {% endblock web_fonts %}
@@ -17,6 +17,14 @@
 {% block wrap_begin %}<div class="container-fluid">{% endblock wrap_begin %}
 
 {% block content_header %}
+    <div class="row adZone1" id="adZone1">
+        <div class="col-md-12 text-center" id="adLeaderboard">
+            <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->
+            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>
+            <!-- AdSpeed.com End -->
+        </div>
+    </div>
+
     {% with header_template="include_hse_header.html" %}
         {{ block.super }}
     {% endwith %}
