--- a/mainsite/templates/www_base.html
+++ b/mainsite/templates/www_base.html
@@ -3,7 +3,7 @@
 
 {% block web_fonts %}
 
-    {% include 'include_scripts.html' %}
+    {{ block.super }}
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700" rel="stylesheet">
 {#    <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">#}
